# ninja-rs

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  macros.rs
